--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "Phong",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
