--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI='mongodb+srv://Fellox:PC083duIobE5vfSf@cluster0.89jaj7s.mongodb.net/?retryWrites=true&w=majority'
-
-HOST='localhost'
-PORT=8017
+DATABASE_NAME='Fellox-group8'
+APP_HOST='localhost'
+APP_PORT=8017
