--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
+    "lodash": "^4.17.21",
     "mongodb": "^5.2.0"
   },
   "devDependencies": {
